// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtistImage Component should mount correctly 1`] = `
<ArtistImage
  img="https://s3-us-west-1.amazonaws.com/songimages/photos/simg90.jpg"
>
  <span
    className="imageContainer"
  >
    <img
      alt=""
      className="image"
    />
  </span>
</ArtistImage>
`;

exports[`ArtistImage Component should render correctly 1`] = `
<span
  class="imageContainer"
>
  <img
    alt=""
    class="image"
  />
</span>
`;

exports[`ArtistImage Component should render correctly according to snapshot 1`] = `
<span
  className="imageContainer"
>
  <img
    alt=""
    className="image"
  />
</span>
`;

exports[`ArtistImage Component should render correctly in "debug" mode 1`] = `
<span
  className="imageContainer"
>
  <img
    alt=""
    className="image"
  />
</span>
`;
